[package]
name = "abstract-bohm-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
typed-arena = "2.0.1"
insta = "1.23.0"
indexmap = "1.9.2"
derive_more = "0.99.17"
derive-new = "0.5.9"
log = "0.4.0"
env_logger = "0.9.0"

[dev-dependencies]
test-log = "0.2.8"